# axum-example

./: Cargo.toml  README.md
src/: main.rs
src/in_memory/: mod.rs  routes.rs  state.rs
src/postgres/: app_state.rs  mod.rs  routes.rs  store.rs
